:bug: fix: now user and admin view work correctly
Also:
fix: mapper implementation